WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132392
[New Multicolumn] ASSERTs in fast/dynamic/continuation-detach-crash.html
https://bugs.webkit.org/show_bug.cgi?id=132392
Summary
[New Multicolumn] ASSERTs in fast/dynamic/continuation-detach-crash.html
Dave Hyatt
Reported
2014-04-30 11:40:34 PDT
The render tree construction is going horribly wrong (nested columns and dynamic spans) in this test case.
Attachments
Patch
(11.82 KB, patch)
2014-04-30 13:46 PDT
,
Dave Hyatt
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2014-04-30 13:46:09 PDT
Created
attachment 230517
[details]
Patch
WebKit Commit Bot
Comment 2
2014-04-30 13:48:38 PDT
Attachment 230517
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/RenderMultiColumnFlowThread.cpp:39: RenderMultiColumnFlowThread::g_shiftingSpanner is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebCore/rendering/RenderMultiColumnFlowThread.cpp:304: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/rendering/RenderMultiColumnFlowThread.h:153: g_shiftingSpanner is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 3 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 3
2014-04-30 14:28:21 PDT
Fixed in
r168043
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug